@@ -309,6 +309,12 @@
       <role name="Manager" />
     </permission>
 
+    <permission name="plone.restapi: Access Plone vocabularies" acquire="True">
+      <role name="Contributor" />
+      <role name="Manager" />
+      <role name="Member" />
+    </permission>
+
   </permissions>
 
 </rolemap>
