@@ -1,0 +1,9 @@
+<rolemap>
+  <permissions>
+    <permission name="plone.restapi: Access Plone vocabularies" acquire="True">
+      <role name="Contributor" />
+      <role name="Manager" />
+      <role name="Member" />
+    </permission>
+  </permissions>
+</rolemap>
